## Change log

### 1.3.1
* Fix - Adding in Fix to translate breadcrumbs if endpoints where translated.

### 1.3.0 - 20 February 2019
* Dev - Separated the "Snack" boxes from the Meal Plan columns.
* Dev - Added in an archive description field for the recipes post type archive.
* Dev - Integrated the recipes archive with the LSX Search plugin.
* Dev - Added in the structure and styling for the Recipes Type taxonomy to match the post type archive.
* Dev - Added a `show_downloads` parameter to the weekly plan shortcode, which displays a list of the downloads added to the downloads category.
* Dev - Refactored single plan tabs and the tab output, so they are passed through filters to allow 3rd Party changes.
* Dev - Design Updates to Recipes Cards.
* Dev - Download button on the workout tab will only appear if there is a pdf attached.
* Dev - Adding Pre Workout Snack and the Recovery Snack to Workout.
* Fix - Fixed the un-prefixed functions
* Fix - Refactored the recipes functions
* Fix - Changing all the kg's and cm's in the detail boxes to just kg and cm (no plural).
* Fix - Making sure the wrapper for the tip carousel doesn't output if there are not tips assigned.
* Fix - Fixed the integration with CMB2, and detecting when it is active.
* Fixed - Pre and Post workout snack titles can be translated individually.


### 1.2.0 - 19 December 2019
* Dev - Added in translatable endpoint settings.
* Dev - Added in placeholder image for Tips.
* Fix - Spacing and margins fixes in general.
* Fix - Styling fixes for the Daily Plan list on tablet view.
* Dev - Improved the search results for Health Plan items.
* Dev- Added in Settings to assign a default workout, recipe, warm up and meal type post.
* Fix - Changed the setting id to mimic the meta_key, and added in a check for `hs_attachement`.
* Dev - Adding in a setting to assign the default post type connections.
* Fix - Made sure that connected ids in the "trash" do not show.