@@ -2,6 +2,8 @@
 
 ### 1.3.1
 * Fix - Adding in Fix to translate breadcrumbs if endpoints where translated.
+* Fix - Fixed issue `Undefined variable: intro_text`.
+* Fix - Fixed issue `Undefined variable: post_id`.
 
 ### 1.3.0 - 20 February 2019
 * Dev - Separated the "Snack" boxes from the Meal Plan columns.
